@@ -24,3 +24,5 @@
   - if no scripts triggered a custom method can be triggered
   - after every thing is done on exit another trigger
 * new: `CliScript` can have their own custom config.
+* update: `TextTable` no longer assumes a header only adding one on `addHeader`.
+* update: `TextTable` example updated.
